# konlineaccounts

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md
daemon/: CMakeLists.txt  Main.qml  accountsfiltermodel.cpp  accountsfiltermodel.h  accountsmanager.cpp  accountsmanager.h  accountsmanagerprivate.cpp  accountsmanagerprivate.h  accountsmodel.cpp  accountsmodel.h  konlineaccountsd.service.in  main.cpp  org.kde.konlineaccountsd.desktop  propertiesadaptor.cpp  propertiesadaptor.h
demo/: .flatpak-manifest.json  CMakeLists.txt  Main.qml  accountsmodel.cpp  accountsmodel.h  main.cpp  org.kde.konlineaccountsdemo.desktop
kcm/: CMakeLists.txt  accountsmodel.cpp  accountsmodel.h  authorizedappsmodel.cpp  authorizedappsmodel.h  availableaccountsmodel.cpp  availableaccountsmodel.h  kcm.cpp  kcm.h  kcm_konlineaccounts.json  suggestedappsmodel.cpp  suggestedappsmodel.h
kcm/ui/: Account.qml  AddAccountDialog.qml  App.qml  Error.qml  main.qml
lib/: CMakeLists.txt  accessmanager.cpp  accessmanager.h  account.cpp  account.h  accountbuilder.cpp  accountbuilder.h  fdwriter.cpp  fdwriter.h  setupitem.cpp  setupitem.h
plugins/: CMakeLists.txt
plugins/google/: CMakeLists.txt  Main.qml  google.cpp  google.h  googleinterface.cpp  googleinterface.h  googlesetup.cpp  googlesetup.h  metadata.json
plugins/mastodon/: CMakeLists.txt  Main.qml  mastodon.cpp  mastodon.h  mastodoninterface.cpp  mastodoninterface.h  mastodonsetup.cpp  mastodonsetup.h  metadata.json  metadata.json.license
plugins/nextcloud/: CMakeLists.txt  Main.qml  caldav.cpp  caldav.h  carddav.cpp  carddav.h  metadata.json  nextcloud.cpp  nextcloud.h  nextcloudinterface.cpp  nextcloudinterface.h  nextcloudsetup.cpp  nextcloudsetup.h
po/ca/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
po/es/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
po/he/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
po/nl/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
po/pt_BR/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
po/tr/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
po/uk/: kcm_konlineaccounts.po  konlineaccounts_google.po  konlineaccounts_mastodon.po  konlineaccounts_nextcloud.po  konlineaccountsd.po
